--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </style>
   </head>
   <body class="container">
-    <main class="row">
-      <div class="card text-white first col-md-4 col-sm-0" style="width: 23rem">
+    <main class="row g-0 justify-content-center">
+      <div class="card text-white first col-md-4 col-sm-0" style="width: 20rem">
         <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
           <g fill="none" fill-rule="evenodd">
             <circle fill="#000" opacity=".201" cx="20" cy="20" r="20" />
@@ -69,7 +69,7 @@
       <!-- next  -->
       <div
         class="card text-white second col-md-4 col-sm-0"
-        style="width: 23rem"
+        style="width: 20rem"
       >
         <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
           <g fill="none" fill-rule="evenodd">
@@ -93,7 +93,7 @@
 
       <!-- last -->
 
-      <div class="card text-white third col-md-4 col-sm-0" style="width: 23rem">
+      <div class="card text-white third col-md-4 col-sm-0" style="width: 20rem">
         <svg width="64" height="40" xmlns="http://www.w3.org/2000/svg">
           <g fill="none" fill-rule="evenodd">
             <circle fill="#000" opacity=".201" cx="20" cy="20" r="20" />
